# python_po

./: .env  README.md  locustfile.py  pyproject.toml
features/: inventario.feature
src/inventario/: app.py  models.py
tests/: test_app.py
